--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,8 @@
 
 <body>
 
+    <!-- MAIN HEADER SECTION -->
+
 
     <header id="mainHeader">
         <nav id="mainNav">
@@ -36,6 +38,9 @@
             </ul>
 
         </nav>
+
+
+        <!-- CONTACT SECTION -->
 
         <section id="contact">
 
@@ -64,8 +69,7 @@
                                         placeholder="Enter your order here"></textarea>
                                 </div>
 
-                                <button style="width:100%;background:black;" type="submit"
-                                    class="btn btn-primary">Submit</button>
+                                <button type="submit" class="btn btn-primary">Submit</button>
                             </form>
                     </div>
                     <div class="col-6 contactIcons">
@@ -97,6 +101,8 @@
 
 
 
+        <!-- FOOTER SECTION-->
+
         <footer id="mainFooter">
             <div class="container-fluid">
                 <div class="footerItems">
@@ -117,6 +123,8 @@
                     </div>
                 </div>
             </div>
+
+
 
             <p>Copyright &copy; 2019 Max's Fruit Shop. All Rights Reserved.</p>
         </footer>
