--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
         </div>
     </header>
 
+
+    <!-- FOOTER SECTION-->
+
     <footer id="mainFooter">
         <div class="container-fluid">
             <div class="footerItems">
@@ -73,6 +76,7 @@
                 </div>
             </div>
         </div>
+
 
         <p>Copyright &copy; 2019 Max's Fruit Shop. All Rights Reserved.</p>
     </footer>
