--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
         </nav>
 
 
-
+        <!-- FOOTER SECTION-->
 
         <footer id="mainFooter">
             <div class="container-fluid">
@@ -58,6 +58,8 @@
                     </div>
                 </div>
             </div>
+
+
 
             <p>Copyright &copy; 2019 Max's Fruit Shop. All Rights Reserved.</p>
         </footer>
