--- a/about.html
+++ b/about.html
@@ -19,12 +19,17 @@
 <body>
 
 
+    <!-- MAIN HEADER AND NAVBAR -->
+
     <header id="mainHeader">
         <nav id="mainNav">
             <div class="logoContainer">
                 <img class="logo"
                     src="https://images.unsplash.com/photo-1564979005419-d0c60df1488b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                     alt="">
+            </div>
+            <div class="logoContainer2">
+                <img src="IMG/fruitLogo.png" alt="">
             </div>
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -34,6 +39,33 @@
             </ul>
 
         </nav>
+
+        <section id="about">
+            <div class="container">
+                <div class="row">
+                    <div class=" col-lg-6 col-sm-12 about-a">
+                        <h3>Our History</h3>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore et excepturi dignissimos
+                            sunt ad adipisci quas amet veritatis labore dolorum rerum dicta totam qui fuga voluptas
+                            obcaecati nisi debitis dolor, iure hic ab ipsum possimus nihil tenetur! Consectetur
+                            necessitatibus tenetur eligendi eaque. Distinctio beatae perferendis pariatur delectus,
+                            voluptate cumque aliquam molestiae accusamus sunt, odio aperiam veritatis! A doloremque
+                            harum blanditiis eligendi ratione magni nesciunt eos, pariatur fugit quaerat repudiandae,
+                            veritatis dolore accusantium repellat dicta explicabo! Enim quae quaerat ratione quod
+                            explicabo consectetur fugit nam culpa expedita eum dolor beatae, rem magnam aspernatur
+                            praesentium soluta! Quas non inventore ducimus impedit ut?</p>
+
+                    </div>
+                    <div class=" col-lg-6 col-sm-12 about-b">
+                        <img src="http://www.adsitsolutions.com/images/support/stock-images/iStock_000019688253Medium.jpg"
+                            alt="">
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+
 
 
         <!-- FOOTER SECTION-->
@@ -63,3 +95,7 @@
 
             <p>Copyright &copy; 2019 Max's Fruit Shop. All Rights Reserved.</p>
         </footer>
+
+
+
+</body>
