--- a/fruits.html
+++ b/fruits.html
@@ -18,13 +18,16 @@
 
 <body>
 
-
+    <!-- MAIN HEADER AND NAVBAR -->
     <header id="mainHeader">
         <nav id="mainNav">
             <div class="logoContainer">
                 <img class="logo"
                     src="https://images.unsplash.com/photo-1564979005419-d0c60df1488b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                     alt="">
+            </div>
+            <div class="logoContainer2">
+                <img src="IMG/fruitLogo.png" alt="">
             </div>
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -35,15 +38,17 @@
 
         </nav>
 
+        <!-- ITEMS FOR SALE SECTION -->
 
         <body>
             <section id="fruits">
                 <div class="container">
 
+                    <!-- BOOTSRAP GRID WITH 4 ITEMS PER ROW -->
                     <div class="row">
                         <div class="col-lg-3 col-md-6">
                             <div class="card fruitCard" style="width: 18rem;">
-                                <img src="https://images.unsplash.com/photo-1542792581-e41a0e39da70?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                <img src="https://cdn.pixabay.com/photo/2017/10/03/13/25/rasberry-2812469__340.jpg"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Rasberries</h5>
@@ -54,7 +59,7 @@
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <div class="card fruitCard" style="width: 18rem;">
-                                <img src="https://images.unsplash.com/photo-1562599938-e6fe2a67574b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                <img src="https://cdn.pixabay.com/photo/2017/02/05/12/31/lemons-2039830__340.jpg"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Lemons</h5>
@@ -65,7 +70,7 @@
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <div class="card fruitCard" style="width: 18rem;">
-                                <img src="https://images.unsplash.com/photo-1473439891350-82f82b022d6d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                <img src="https://cdn.pixabay.com/photo/2016/07/11/12/52/apricots-1509634__340.jpg"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Apricots</h5>
@@ -76,7 +81,7 @@
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <div class="card fruitCard" style="width: 18rem;">
-                                <img src="https://images.unsplash.com/photo-1562599938-53b269c207a9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                <img src="https://cdn.pixabay.com/photo/2017/01/20/15/06/orange-1995056__340.jpg"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Oranges</h5>
@@ -91,21 +96,21 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6">
                             <div class="card fruitCard" style="width: 18rem;">
-                                <img src="https://images.unsplash.com/photo-1542792581-e41a0e39da70?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                <img src="https://images.unsplash.com/photo-1549301014-95d119f5c960?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Rasberries</h5>
-                                    <p class="card-text">R25/Kg</p>
+                                    <h5 class="card-title">Apples</h5>
+                                    <p class="card-text">R45/Kg</p>
                                     <a href="contact.html" class="btn btn-primary">Order</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <div class="card fruitCard" style="width: 18rem;">
-                                <img src="https://images.unsplash.com/photo-1562599938-e6fe2a67574b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                <img src="https://images.unsplash.com/photo-1474564862106-1f23d10b9d72?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Lemons</h5>
+                                    <h5 class="card-title">Peaches</h5>
                                     <p class="card-text">R35/Kg</p>
                                     <a href="contact.html" class="btn btn-primary">Order</a>
                                 </div>
@@ -113,22 +118,22 @@
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <div class="card fruitCard" style="width: 18rem;">
-                                <img src="https://images.unsplash.com/photo-1473439891350-82f82b022d6d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                <img src="https://cdn.pixabay.com/photo/2019/02/15/20/51/lychee-3999315__340.jpg"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Apricots</h5>
-                                    <p class="card-text">R35/Kg</p>
+                                    <h5 class="card-title">Litchis</h5>
+                                    <p class="card-text">R40/Kg</p>
                                     <a href="contact.html" class="btn btn-primary">Order</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <div class="card fruitCard" style="width: 18rem;">
-                                <img src="https://images.unsplash.com/photo-1562599938-53b269c207a9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                <img src="https://images.unsplash.com/photo-1550825570-8ae96cf12d87?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Oranges</h5>
-                                    <p class="card-text">R25/Kg</p>
+                                    <h5 class="card-title">Mangos</h5>
+                                    <p class="card-text">R15/Kg</p>
                                     <a href="contact.html" class="btn btn-primary">Order</a>
                                 </div>
                             </div>
@@ -139,21 +144,21 @@
                     <div class="row">
                         <div class="col-lg-3 col-md-6">
                             <div class="card fruitCard" style="width: 18rem;">
-                                <img src="https://images.unsplash.com/photo-1542792581-e41a0e39da70?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                <img src="https://images.unsplash.com/photo-1571338734721-f8833d15e7b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Rasberries</h5>
-                                    <p class="card-text">R25/Kg</p>
+                                    <h5 class="card-title">Watermelons</h5>
+                                    <p class="card-text">R55/Kg</p>
                                     <a href="contact.html" class="btn btn-primary">Order</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <div class="card fruitCard" style="width: 18rem;">
-                                <img src="https://images.unsplash.com/photo-1562599938-e6fe2a67574b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                <img src="https://images.unsplash.com/photo-1521997888043-aa9c827744f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Lemons</h5>
+                                    <h5 class="card-title">Kiwis</h5>
                                     <p class="card-text">R35/Kg</p>
                                     <a href="contact.html" class="btn btn-primary">Order</a>
                                 </div>
@@ -161,21 +166,21 @@
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <div class="card fruitCard" style="width: 18rem;">
-                                <img src="https://images.unsplash.com/photo-1473439891350-82f82b022d6d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                <img src="https://images.unsplash.com/photo-1543218024-57a70143c369?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Apricots</h5>
-                                    <p class="card-text">R35/Kg</p>
+                                    <h5 class="card-title">Bananas</h5>
+                                    <p class="card-text">R30/Kg</p>
                                     <a href="contact.html" class="btn btn-primary">Order</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-3 col-md-6">
                             <div class="card fruitCard" style="width: 18rem;">
-                                <img src="https://images.unsplash.com/photo-1562599938-53b269c207a9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
+                                <img src="https://images.unsplash.com/photo-1447175008436-054170c2e979?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                                     class="card-img-top" alt="...">
                                 <div class="card-body">
-                                    <h5 class="card-title">Oranges</h5>
+                                    <h5 class="card-title">Carrots</h5>
                                     <p class="card-text">R25/Kg</p>
                                     <a href="contact.html" class="btn btn-primary">Order</a>
                                 </div>
