--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
 
 <body>
 
-    <!-- MAIN HEADER SECTION -->
+    <!-- MAIN HEADER AND NAVBAR -->
 
 
     <header id="mainHeader">
@@ -29,6 +29,9 @@
                 <img class="logo"
                     src="https://images.unsplash.com/photo-1564979005419-d0c60df1488b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                     alt="">
+            </div>
+            <div class="logoContainer2">
+                <img src="IMG/fruitLogo.png" alt="">
             </div>
             <ul>
                 <li><a href="index.html">HOME</a></li>
@@ -47,7 +50,7 @@
             <div class="container contactContainer">
 
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
                         <h4>Please get in contact with us via the form below for some delicious fruits.</h2>
                             <p></p>
                             <form>
@@ -72,7 +75,7 @@
                                 <button type="submit" class="btn btn-primary">Submit</button>
                             </form>
                     </div>
-                    <div class="col-6 contactIcons">
+                    <div class="col-6  contactIcons">
                         <h4>Alternitavely you may contact us via one of the below methods:</h4>
                         <div>
                             <i class="fas fa-phone fa-2x"></i>
