--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
 <body>
 
+    <!-- MAIN HEADER AND NAVBAR -->
+
 
     <header id="mainHeader">
         <nav id="mainNav">
@@ -25,6 +27,9 @@
                 <img class="logo"
                     src="https://images.unsplash.com/photo-1564979005419-d0c60df1488b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                     alt="">
+            </div>
+            <div class="logoContainer2">
+                <img src="IMG/fruitLogo.png" alt="">
             </div>
             <ul>
                 <li><a class="current" href="index.html">HOME</a></li>
@@ -34,6 +39,8 @@
             </ul>
 
         </nav>
+
+
 
 
         <div class="container-bg">
