--- a/fruits.html
+++ b/fruits.html
@@ -13,6 +13,7 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <script src="https://kit.fontawesome.com/af356b6923.js" crossorigin="anonymous"></script>
+    <script src="main.js"></script>
     <title>Max's Fruit Shop</title>
 </head>
 
@@ -50,8 +51,15 @@
                             <div class="card fruitCard" style="width: 18rem;">
                                 <img src="https://cdn.pixabay.com/photo/2017/10/03/13/25/rasberry-2812469__340.jpg"
                                     class="card-img-top" alt="...">
+                                <div class="popup" onclick="popUp12()"><button class="btn btn-dark popupButton">More
+                                        Info</button>
+                                    <span class="popuptext" id="myPopup12">The raspberry is the edible fruit of a
+                                        multitude of plant species in the genus Rubus of the rose family, most of which
+                                        are in the subgenus Idaeobatus; the name also applies to these plants
+                                        themselves. Raspberries are perennial with woody stems. </span>
+                                </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Rasberries</h5>
+                                    <h5 class="card-title">Raspberries</h5>
                                     <p class="card-text">R25/Kg</p>
                                     <a href="contact.html" class="btn btn-primary">Order</a>
                                 </div>
@@ -61,6 +69,16 @@
                             <div class="card fruitCard" style="width: 18rem;">
                                 <img src="https://cdn.pixabay.com/photo/2017/02/05/12/31/lemons-2039830__340.jpg"
                                     class="card-img-top" alt="...">
+                                <div class="popup" onclick="popUp11()"><button class="btn btn-dark popupButton">More
+                                        Info</button>
+                                    <span class="popuptext" id="myPopup11">
+                                        The tree's ellipsoidal yellow fruit is used for culinary and non-culinary
+                                        purposes throughout the world, primarily for its juice, which has both culinary
+                                        and cleaning uses. The pulp and rind are also used in cooking and baking. The
+                                        juice of the lemon is about 5% to 6% citric acid, with a pH of around 2.2,
+                                        giving it a sour taste. The distinctive sour taste of lemon juice makes it a key
+                                        ingredient in drinks and foods such as lemonade and lemon meringue pie. </span>
+                                </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Lemons</h5>
                                     <p class="card-text">R35/Kg</p>
@@ -72,6 +90,16 @@
                             <div class="card fruitCard" style="width: 18rem;">
                                 <img src="https://cdn.pixabay.com/photo/2016/07/11/12/52/apricots-1509634__340.jpg"
                                     class="card-img-top" alt="...">
+                                <div class="popup" onclick="popUp10()"><button class="btn btn-dark popupButton">More
+                                        Info</button>
+                                    <span class="popuptext" id="myPopup10">An apricot (an Apricot is a fruit, or the
+                                        tree
+                                        that bears the fruit, of several species in the genus Prunus (stone fruits).
+
+                                        Usually, an apricot tree is from the species P. armeniaca, but the species P.
+                                        brigantina, P. mandshurica, P. mume, P. zhengheensis and P. sibirica are closely
+                                        related, have similar fruit, and are also called apricots. </span>
+                                </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Apricots</h5>
                                     <p class="card-text">R35/Kg</p>
@@ -83,6 +111,14 @@
                             <div class="card fruitCard" style="width: 18rem;">
                                 <img src="https://cdn.pixabay.com/photo/2017/01/20/15/06/orange-1995056__340.jpg"
                                     class="card-img-top" alt="...">
+                                <div class="popup" onclick="popUp9()"><button class="btn btn-dark popupButton">More
+                                        Info</button>
+                                    <span class="popuptext" id="myPopup9">The orange is the fruit of the citrus species
+                                        Citrus × sinensis in the family Rutaceae, native to China.It is also called
+                                        sweet orange, to distinguish it from the related Citrus × aurantium, referred to
+                                        as bitter orange. The sweet orange reproduces asexually (apomixis through
+                                        nucellar embryony); varieties of sweet orange arise through mutations.</span>
+                                </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Oranges</h5>
                                     <p class="card-text">R25/Kg</p>
@@ -98,6 +134,14 @@
                             <div class="card fruitCard" style="width: 18rem;">
                                 <img src="https://images.unsplash.com/photo-1549301014-95d119f5c960?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                                     class="card-img-top" alt="...">
+                                <div class="popup" onclick="popUp8()"><button class="btn btn-dark popupButton">More
+                                        Info</button>An apple is a sweet, edible fruit produced by an apple tree (Malus
+                                    domestica). Apple trees are cultivated worldwide and are the most widely grown
+                                    species in the genus Malus. The tree originated in Central Asia, where its wild
+                                    ancestor, Malus sieversii, is still found today. Apples have been grown for
+                                    thousands of years in Asia and Europe and were brought to North America by European
+                                    colonists.</span>
+                                </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Apples</h5>
                                     <p class="card-text">R45/Kg</p>
@@ -109,6 +153,14 @@
                             <div class="card fruitCard" style="width: 18rem;">
                                 <img src="https://images.unsplash.com/photo-1474564862106-1f23d10b9d72?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                                     class="card-img-top" alt="...">
+                                <div class="popup" onclick="popUp7()"><button class="btn btn-dark popupButton">More
+                                        Info</button>
+                                    <span class="popuptext" id="myPopup7">The peach (Prunus persica) is a deciduous tree
+                                        native to the region of Northwest China between the Tarim Basin and the north
+                                        slopes of the Kunlun Mountains, where it was first domesticated and
+                                        cultivated.[3] It bears an edible juicy fruit called a peach or a nectarine.
+                                    </span>
+                                </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Peaches</h5>
                                     <p class="card-text">R35/Kg</p>
@@ -120,6 +172,16 @@
                             <div class="card fruitCard" style="width: 18rem;">
                                 <img src="https://cdn.pixabay.com/photo/2019/02/15/20/51/lychee-3999315__340.jpg"
                                     class="card-img-top" alt="...">
+                                <div class="popup" onclick="popUp6()"><button class="btn btn-dark popupButton">More
+                                        Info</button>
+                                    <span class="popuptext" id="myPopup6">It is a tropical tree native to the Guangdong
+                                        and Fujian provinces of southeastern China, where cultivation is documented from
+                                        the 11th century. China is the main producer of lychees, followed by India,
+                                        other countries in Southeast Asia, the Indian Subcontinent and South Africa. A
+                                        tall evergreen tree, the lychee bears small fleshy fruits. The outside of the
+                                        fruit is pink-red, roughly textured and inedible, covering sweet flesh eaten in
+                                        many different dessert dishes. </span>
+                                </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Litchis</h5>
                                     <p class="card-text">R40/Kg</p>
@@ -131,8 +193,14 @@
                             <div class="card fruitCard" style="width: 18rem;">
                                 <img src="https://images.unsplash.com/photo-1550825570-8ae96cf12d87?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                                     class="card-img-top" alt="...">
+                                <div class="popup" onclick="popUp5()"><button class="btn btn-dark popupButton">More
+                                        Info</button>
+                                    <span class="popuptext" id="myPopup5">Mangoes are juicy stone fruit (drupes)
+                                        produced from numerous species of tropical trees belonging to the flowering
+                                        plant genus Mangifera, cultivated mostly for this edible fruit.. </span>
+                                </div>
                                 <div class="card-body">
-                                    <h5 class="card-title">Mangos</h5>
+                                    <h5 class="card-title">Mangoes</h5>
                                     <p class="card-text">R15/Kg</p>
                                     <a href="contact.html" class="btn btn-primary">Order</a>
                                 </div>
@@ -146,6 +214,17 @@
                             <div class="card fruitCard" style="width: 18rem;">
                                 <img src="https://images.unsplash.com/photo-1571338734721-f8833d15e7b9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                                     class="card-img-top" alt="...">
+                                <div class="popup" onclick="popUp4()"><button class="btn btn-dark popupButton">More
+                                        Info</button>
+                                    <span class="popuptext" id="myPopup4">Citrullus lanatus is a plant species in the
+                                        family Cucurbitaceae, a vine-like (scrambler and trailer) flowering plant
+                                        originating in West Africa. It is cultivated for its fruit. The subdivision of
+                                        this species into two varieties, watermelons (Citrullus lanatus (Thunb.) var.
+                                        lanatus) and citron melons (Citrullus lanatus var. citroides (L. H. Bailey)
+                                        Mansf.), originated with the erroneous synonymization of Citrullus lanatus
+                                        (Thunb.) Matsum. & Nakai and Citrullus vulgaris Schrad. by L.H. Bailey in 1930
+                                    </span>
+                                </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Watermelons</h5>
                                     <p class="card-text">R55/Kg</p>
@@ -157,6 +236,14 @@
                             <div class="card fruitCard" style="width: 18rem;">
                                 <img src="https://images.unsplash.com/photo-1521997888043-aa9c827744f8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                                     class="card-img-top" alt="...">
+                                <div class="popup" onclick="popUp3()"><button class="btn btn-dark popupButton">More
+                                        Info</button>
+                                    <span class="popuptext" id="myPopup3">Kiwi (/ˈkiːwi/ KEE-wee) or kiwis are
+                                        flightless birds native to New Zealand, in the genus Apteryx and family
+                                        Apterygidae. Approximately the size of a domestic chicken, kiwi are by far the
+                                        smallest living ratites (which also consist of ostriches, emus, rheas, and
+                                        cassowaries).</span>
+                                </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Kiwis</h5>
                                     <p class="card-text">R35/Kg</p>
@@ -168,6 +255,13 @@
                             <div class="card fruitCard" style="width: 18rem;">
                                 <img src="https://images.unsplash.com/photo-1543218024-57a70143c369?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                                     class="card-img-top" alt="...">
+                                <div class="popup" onclick="popUp2()"><button class="btn btn-dark popupButton">More
+                                        Info</button>
+                                    <span class="popuptext" id="myPopup2">A banana is an edible fruit – botanically a
+                                        berry – produced by several kinds of large herbaceous flowering plants in
+                                        the genus Musa. In some countries, bananas used for cooking may be called
+                                        "plantains", distinguishing them from dessert bananas. </span>
+                                </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Bananas</h5>
                                     <p class="card-text">R30/Kg</p>
@@ -178,7 +272,14 @@
                         <div class="col-lg-3 col-md-6">
                             <div class="card fruitCard" style="width: 18rem;">
                                 <img src="https://images.unsplash.com/photo-1447175008436-054170c2e979?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
-                                    class="card-img-top" alt="...">
+                                    class="card-img-top popup" alt="...">
+                                <div class="popup" onclick="popUp()"><button class="btn btn-dark popupButton">More
+                                        Info</button>
+                                    <span class="popuptext" id="myPopup">The carrot (Daucus carota subsp. sativus) is a
+                                        root vegetable, usually orange in colour, though purple, black, red, white, and
+                                        yellow cultivars exist</span>
+                                </div>
+
                                 <div class="card-body">
                                     <h5 class="card-title">Carrots</h5>
                                     <p class="card-text">R25/Kg</p>
