--- a/index.html
+++ b/index.html
@@ -50,10 +50,22 @@
                         style="color:#e3b04b;font-size: 40px;">s</span> Fruit Shop</h1>
 
 
+
             </div>
 
-            <!-- <div class="container-small">
+        </div>
 
+
+
+
+        <!-- <div class="card" style="width: 18rem;">
+                <img src="..." class="card-img-top" alt="...">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                    <a href="#" class="btn btn-primary">Go somewhere</a>
+                </div>
             </div> -->
 
 
