--- a/fruits.html
+++ b/fruits.html
@@ -135,12 +135,14 @@
                                 <img src="https://images.unsplash.com/photo-1549301014-95d119f5c960?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"
                                     class="card-img-top" alt="...">
                                 <div class="popup" onclick="popUp8()"><button class="btn btn-dark popupButton">More
-                                        Info</button>An apple is a sweet, edible fruit produced by an apple tree (Malus
-                                    domestica). Apple trees are cultivated worldwide and are the most widely grown
-                                    species in the genus Malus. The tree originated in Central Asia, where its wild
-                                    ancestor, Malus sieversii, is still found today. Apples have been grown for
-                                    thousands of years in Asia and Europe and were brought to North America by European
-                                    colonists.</span>
+                                        Info</button> <span class="popuptext" id="mypopup8"> An apple is a sweet, edible
+                                        fruit produced by an apple tree (Malus
+                                        domestica). Apple trees are cultivated worldwide and are the most widely grown
+                                        species in the genus Malus. The tree originated in Central Asia, where its wild
+                                        ancestor, Malus sieversii, is still found today. Apples have been grown for
+                                        thousands of years in Asia and Europe and were brought to North America by
+                                        European
+                                        colonists.</span>
                                 </div>
                                 <div class="card-body">
                                     <h5 class="card-title">Apples</h5>
